<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/guideline"
    />

    <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="progressBar_load, tv_loading" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent"/>

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_load"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_visibility"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            style="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_load"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <TextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patchy_rain_possible"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>

    <ImageView
            android:id="@+id/iv_condition_icon"
            android:src="@drawable/ic_wb_sunny_black_24dp"
            android:layout_width="104dp"
            android:layout_height="106dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_condition"
            app:layout_constraintStart_toEndOf="@+id/tv_condition"
            android:layout_marginEnd="47dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.983"/>

    <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_temperature"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_condition" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_condition_icon" android:layout_marginEnd="95dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:layout_width="115dp"
            android:layout_height="24dp"
            android:text="@string/feels_like_20_4_c"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:id="@+id/tv_feel_like"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="38dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_condition_icon" android:layout_marginEnd="122dp"
            app:layout_constraintHorizontal_bias="0.044"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wind"
            android:text="@string/wind_se_5_3_m_s"
            style="@style/TextAppearance.MaterialComponents.Subtitle2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_feel_like" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_precipitation"
            android:text="@string/precipitation_5mm"
            style="@style/TextAppearance.MaterialComponents.Subtitle2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_wind" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_visibility"
            android:text="@string/visibility_20_km"
            style="@style/TextAppearance.MaterialComponents.Subtitle2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_precipitation" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>